fix: use ШЕВРОН-1, fix modal scroll issue, and improve video autoplay on mobile

--- a/css/landing/section-about.css
+++ b/css/landing/section-about.css
@@ -62,7 +62,7 @@
   width: 140%;
   height: auto;
   aspect-ratio: 1/1;
-  background-image: url('../../images/ШЕВРОН.png');
+  background-image: url('../../images/ШЕВРОН-1.png');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
